--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Seguritodos</title>
 
     <!-- Meta Open Graph para WhatsApp y redes sociales -->
-  <meta property="og:title" content="NetLogistics" />
-  <meta property="og:description" content="NET LOGISTICS CHILE es una empresa operadora de carga internacional con una amplia red de agentes en los principales puertos y aeropuertos de todo el mundo." />
-  <meta property="og:image" content="https://www.netlogistics.cl/assets/img/android-chrome-192x192.png" /> <!-- Imagen que se verá al compartir -->
-  <meta property="og:url" content="https://www.netlogistics.cl/" /> <!-- URL de la web -->
+  <meta property="og:title" content="Seguritodos" />
+  <meta property="og:description" content="Seguridad y prevención a tu medida: Asesorías personalizadas para cumplir con la normativa y proteger a tu equipo." />
+  <meta property="og:image" content="https://www.seguritodos.cl/assets/img/favicon/android-chrome-192x192.png" /> <!-- Imagen que se verá al compartir -->
+  <meta property="og:url" content="https://www.seguritodos.cl/" /> <!-- URL de la web -->
   <meta property="og:type" content="website" />
 
 
