--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <p class="px-5 text-barlowc texto-fade description text-center text-light bg-secondary w-75 rounded d-flex align-items-center justify-content-center">Francisco Estay Mardones - Experto en Prevención de Riesgos</p>
       <p class="px-5 text-barlowc texto-fade description text-center pt-4 text-light">LinkedIn:</p>
       <div class="col-12 col-md-3 d-flex justify-content-center gap-5 pb-5">
-        <a href="https://www.facebook.com/share/14n382nfdU/" target="_blank"><i class="fa-brands fa-linkedin fa-3x text-primary"></i></a>
+        <a href="https://www.linkedin.com/in/francisco-estay-mardones-1a7875b6/" target="_blank"><i class="fa-brands fa-linkedin fa-3x text-primary"></i></a>
       </div>
      </div>
      <footer class="row bg-secondary p-5 gap-5 justify-content-evenly align-items-center">
