--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
       <h2 class="text-center display-5 pt-4 pb-4 mb-0 text-barlow titulo-animado ">
         Misión
       </h2>
-      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container">Resolver las principales necesidades de seguridad y salud de
+      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container text-pc">Resolver las principales necesidades de seguridad y salud de
 
         las empresas en chile.
       </p>
       <h2 class="text-center display-5 pt-4 pb-4 mb-0 text-barlow titulo-animado ">
         Visión
       </h2>
-      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container">Ser líderes en materia de asesorías personalizadas.
+      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container text-pc">Ser líderes en materia de asesorías personalizadas.
       </p>
       <h2 class="text-center display-5 pt-4 pb-4 mb-0 text-barlow titulo-animado ">
         Valores
       </h2>
-      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container">Profesionalismo, respeto e integridad.
+      <p class="px-5 text-barlowc texto-fade display-6 pb-2 text-justify container pb-5 text-pc">Profesionalismo, respeto e integridad.
       </p>
        <!-- Botón para abrir el pop-up -->
   <!-- <button id="openPopup" class="btn d-none">Ver Información</button> -->
@@ -196,7 +196,7 @@
             </div>
 
             <p class="text-center display-5 pt-2 mb-0 text-barlow titulo-animado text-dark px-4">Francisco Estay Mardones</p>
-              <p class="text-justify display-6 pb-5 mb-0 text-barlowc px-5 text-dark"><strong>APR LIDER:</strong> Experto en Prevención de Riesgos Titular, Ingeniero en Prevención
+              <p class="text-justify display-6 pb-5 mb-0 text-barlowc px-5 text-dark texto-fade"><strong>APR LIDER:</strong> Experto en Prevención de Riesgos Titular, Ingeniero en Prevención
                 de Riesgos con Registro del S.N.S. y 8 años de experiencia laboral. Oficiará como
                 titular del proyecto.</p>
   
@@ -208,7 +208,7 @@
             </div>
 
             <p class="text-center display-5 pt-2 mb-0 text-barlow titulo-animado text-dark px-4">APR Suplente</p>
-              <p class="text-justify display-6 pb-5 mb-0 text-barlowc px-5 text-dark">Experto Profesional en Prevención de Riesgos Suplente:
+              <p class="text-justify display-6 pb-5 mb-0 text-barlowc px-5 text-dark texto-fade">Experto Profesional en Prevención de Riesgos Suplente:
                 Ingeniero en Prevención de Riesgos con Registro del S.N.S. y 15 años de
                 experiencia laboral. Oficiará como subrogante del proyecto.</p>
 
@@ -234,7 +234,7 @@
     
 
     <div class="counter-container pt-5 pb-5 bg-seguro">
-      <div class="bg-whiteopacity rounded p-4">
+      <div class="bg-whiteopacity rounded p-4 mt-5">
         <div class="counter-box">
           <p class="text-barlowc text-count">Empresas asesoradas</p>
           <p class="counter" data-target="100">0</p>
@@ -246,7 +246,7 @@
           <p class="counter money" data-target="500">+ 0</p>
         </div>
       </div>
-      <div class="bg-whiteopacity rounded p-4">
+      <div class="bg-whiteopacity rounded p-4 mb-5">
         <div class="counter-box">
           <p class="text-barlowc text-count">Años de Experiencia</p>
           <p class="counter" data-target="15">0</p>
