--- a/item3.html
+++ b/item3.html
@@ -230,7 +230,7 @@
         <a href="#contact"; class="hp">Contacto</a>
       </div>
       
-      <div class="col-12 col-md-3 d-flex justify-content-center"><p>Todos los derechos reservados.</p></div>
+      <div class="col-12 col-md-3 d-flex justify-content-center"><p>©2025 Seguritodos | Asesorías personalizadas para cumplir con la normativa y proteger a tu equipo. | Todos los derechos reservados.</p></div>
     </footer>
     <!-- Botón de WhatsApp -->
 <a href="https://wa.me/1234567890" class="whatsapp-btn" target="_blank">
